
	* gtk/Graphics/UI/Gtk.hs: re-export the Graphics.UI.Gtk.Cairo module.

	* configure.ac, Makefile.am: add the cairo package to the build sytem.

	* gtk/gtk.pkg.in, gtk/gtk.package.conf.in, gtk/gtk.cabal.in: make the
	gtk package depend on the cairo package if we're building with cairo.

	* AUTHORS: add Paolo Martini.

	* gtk/Graphics/UI/Gtk/Cairo.chs.pp: make it build correctly.

2005-08-26 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.ac: add glib and pango to the PKG_CHECK_MODULES test.
	Hopefully this will make things work better on Mac OS X.

2005-08-26  Axel Simon <A.Simon@kent.ac.uk>

	* gtk/Graphics/UI/Gtk/Gdk/Events.hsc: Derive Ord for Modifiers.

	* gtk/Graphics/UI/Gtk/Multiline/TextBuffer.chs.pp: Pass a
	TextTagTable as the Maybe argument to textBufferNew. Using a class
	context only fails to compile if Nothing is passed in.

	* gtk/Graphics/UI/Gtk/Selectors/FileChooser.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/Window.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/MenuBar.chs.pp: Conditionally
	compile some functions for Gtk versions earlier than 2.8.
	
2005-08-25 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Pango/Layout.chs.pp: remove the definition of
	the EllipsizeMode and import the version that already existed in the
	Pango.Enum module instead. And use the PANGO_CHECK_VERSION test.

	* gtk/Graphics/UI/Gtk/Pango/Enums.chs.pp: use the PANGO_CHECK_VERSION
	test rather than GTK_CHECK_VERSION.

	* gtk/Graphics/UI/Gtk/ActionMenuToolbar/UIManager.chs.pp,
	gtk/Graphics/UI/Gtk/Display/Image.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/ToolButton.chs.pp,
	gtk/Graphics/UI/Gtk/Multiline/TextTag.chs.pp: trivial haddock fixes.

2005-08-24 Duncan Coutts <duncan@coutts.uklinux.net>

	* mk/common.mk: strip two suffixes off to get the package name, due to
	the fact that we're now caling the package files foo.package.conf.

	* gtk/Graphics/UI/Gtk/Buttons/RadioButton.chs,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/MenuBar.chs,